wip - create interfaces and tests