@@ -2,6 +2,8 @@ package apoc;
 
 import apoc.custom.CypherProcedures;
 import apoc.custom.CypherProceduresHandler;
+import apoc.dv.DataVirtualizationCatalog;
+import apoc.dv.DataVirtualizationCatalogHandler;
 import apoc.load.LoadDirectory;
 import apoc.load.LoadDirectoryHandler;
 import apoc.ttl.TTLLifeCycle;
@@ -9,11 +11,14 @@ import apoc.uuid.Uuid;
 import apoc.uuid.UuidHandler;
 import org.neo4j.annotations.service.ServiceProvider;
 import org.neo4j.graphdb.GraphDatabaseService;
+import org.neo4j.graphdb.event.DatabaseEventListener;
 import org.neo4j.internal.helpers.collection.MapUtil;
 import org.neo4j.kernel.availability.AvailabilityListener;
 import org.neo4j.kernel.internal.GraphDatabaseAPI;
 import org.neo4j.kernel.lifecycle.Lifecycle;
 
+import javax.xml.crypto.Data;
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -24,13 +29,16 @@ import java.util.concurrent.ConcurrentHashMap;
 public class ExtendedApocGlobalComponents implements ApocGlobalComponents {
 
     private final Map<GraphDatabaseService,CypherProceduresHandler> cypherProcedureHandlers = new ConcurrentHashMap<>();
+    private List<DatabaseEventListener> lists = new ArrayList<>();
 
     @Override
     public Map<String, Lifecycle> getServices(GraphDatabaseAPI db, ApocExtensionFactory.Dependencies dependencies) {
 
+//        dependencies.databaseManagementService().registerDatabaseEventListener(new DataVirtualizationAvailabilityHandler());
 
         CypherProceduresHandler cypherProcedureHandler = new CypherProceduresHandler(
                 db,
+                dependencies.databaseManagementService(), // todo - forse si può rimuovere
                 dependencies.scheduler(),
                 dependencies.apocConfig(),
                 dependencies.log().getUserLog(CypherProcedures.class),
@@ -38,32 +46,50 @@ public class ExtendedApocGlobalComponents implements ApocGlobalComponents {
         );
         cypherProcedureHandlers.put(db, cypherProcedureHandler);
 
-        return MapUtil.genericMap(
-
-                "ttl", new TTLLifeCycle(dependencies.scheduler(), db, dependencies.apocConfig(), dependencies.ttlConfig(), dependencies.log().getUserLog(TTLLifeCycle.class)),
-
-                "uuid", new UuidHandler(db,
+        final TTLLifeCycle ttlLifeCycle = new TTLLifeCycle(dependencies.scheduler(), db, dependencies.apocConfig(), dependencies.ttlConfig(), dependencies.log().getUserLog(TTLLifeCycle.class));
+        final UuidHandler uuidHandler = new UuidHandler(db,
                 dependencies.databaseManagementService(),
                 dependencies.log().getUserLog(Uuid.class),
                 dependencies.apocConfig(),
-                dependencies.globalProceduresRegistry()),
+                dependencies.globalProceduresRegistry());
+        
+        final DataVirtualizationCatalogHandler dvHandler = new DataVirtualizationCatalogHandler(db, dependencies.log().getUserLog(DataVirtualizationCatalog.class));
+        
+        lists = List.of(ttlLifeCycle, uuidHandler, dvHandler);
+        
+        return MapUtil.genericMap(
+
+                "ttl", ttlLifeCycle,
+
+                "uuid", uuidHandler,
 
                 "directory", new LoadDirectoryHandler(db,
                         dependencies.log().getUserLog(LoadDirectory.class),
                         dependencies.pools()),
 
-                "cypherProcedures", cypherProcedureHandler
+                "cypherProcedures", cypherProcedureHandler, 
+                "dvHandler", dvHandler
+//                , "dataVirtualizationAvailabilityHandler", new DataVirtualizationAvailabilityHandler(dependencies.databaseManagementService())
         );
     }
 
     @Override
     public Collection<Class> getContextClasses() {
-        return List.of(CypherProceduresHandler.class, UuidHandler.class, LoadDirectoryHandler.class);
+        return List.of(CypherProceduresHandler.class, UuidHandler.class, LoadDirectoryHandler.class, DataVirtualizationCatalogHandler.class);
     }
 
     @Override
-    public Iterable<AvailabilityListener> getListeners(GraphDatabaseAPI db, ApocExtensionFactory.Dependencies dependencies) {
+    public Iterable<AvailabilityListener> getListeners(GraphDatabaseAPI db, ApocExtensionFactory.Dependencies dependencies) { // todo - credo qua...
+//        return List.of(); todo - valutare, credo non serva...
         CypherProceduresHandler cypherProceduresHandler = cypherProcedureHandlers.get(db);
-        return cypherProceduresHandler==null ? Collections.emptyList() : Collections.singleton(cypherProceduresHandler);
+        return cypherProceduresHandler==null ? Collections.emptyList() : List.of(cypherProceduresHandler);
+    }
+
+    @Override
+    public List<DatabaseEventListener> getDbListeners() { // todo - credo qua...
+        return lists;
+//        return List.of();
+//        CypherProceduresHandler cypherProceduresHandler = cypherProcedureHandlers.get(db);
+//        return cypherProceduresHandler==null ? Collections.emptyList() : List.of(cypherProceduresHandler);
     }
 }
